--- a/Flight_Price.ipynb
+++ b/Flight_Price.ipynb
@@ -1598,8 +1598,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "0737529d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('Route',axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "4aa081f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Total_Stops</th>\n",
+       "      <th>Additional_Info</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Arrival_hour</th>\n",
+       "      <th>Arrival_min</th>\n",
+       "      <th>Departure_hour</th>\n",
+       "      <th>Departure_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>3897</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>7h 25m</td>\n",
+       "      <td>2</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7662</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Airline    Source Destination Duration  Total_Stops Additional_Info  \\\n",
+       "0     IndiGo  Banglore   New Delhi   2h 50m            0         No info   \n",
+       "1  Air India   Kolkata    Banglore   7h 25m            2         No info   \n",
+       "\n",
+       "   Price  Date  Month  Year  Arrival_hour  Arrival_min  Departure_hour  \\\n",
+       "0   3897    24      3  2019             1           10              22   \n",
+       "1   7662     1      5  2019            13           15               5   \n",
+       "\n",
+       "   Departure_min  \n",
+       "0             20  \n",
+       "1             50  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "556209c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2\n",
+       "1         7\n",
+       "2        19\n",
+       "3         5\n",
+       "4         4\n",
+       "         ..\n",
+       "10678     2\n",
+       "10679     2\n",
+       "10680     3\n",
+       "10681     2\n",
+       "10682     8\n",
+       "Name: Duration, Length: 10683, dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Duration'].str.split(' ').str[0].str.split('h').str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6b86ff72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['IndiGo', 'Air India', 'Jet Airways', 'SpiceJet',\n",
+       "       'Multiple carriers', 'GoAir', 'Vistara', 'Air Asia',\n",
+       "       'Vistara Premium economy', 'Jet Airways Business',\n",
+       "       'Multiple carriers Premium economy', 'Trujet'], dtype=object)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Airline'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "d55f5884",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Banglore', 'Kolkata', 'Delhi', 'Chennai', 'Mumbai'], dtype=object)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Source'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "c86db746",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No info', 'In-flight meal not included',\n",
+       "       'No check-in baggage included', '1 Short layover', 'No Info',\n",
+       "       '1 Long layover', 'Change airports', 'Business class',\n",
+       "       'Red-eye flight', '2 Long layover'], dtype=object)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Additional_Info'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36402ca8",
    "metadata": {},
    "outputs": [],
    "source": []
